# sdlTemplateC

./: .gitignore  CMakeLists.txt  Makefile  README.md
SDL2-2.30.9/cmake/: sdl2-config-version.cmake  sdl2-config.cmake
SDL2-2.30.9/i686-w64-mingw32/lib/cmake/SDL2/: SDL2mainTargets.cmake  SDL2testTargets.cmake
SDL2-2.30.9/i686-w64-mingw32/lib/cmake/SDL2_ttf/: sdl2_ttf-config.cmake
SDL2-2.30.9/test/: CMakeLists.txt
SDL2-2.30.9/x86_64-w64-mingw32/lib/cmake/SDL2/: SDL2Config.cmake  SDL2Targets.cmake  SDL2mainTargets.cmake  SDL2staticTargets.cmake
include/: Constants.h
src/: Action.h  Session.cpp  Session.h  Sprite.cpp  Sprite.h  System.cpp  System.h  main.cpp
